Circuit Breaker implementation
+ Implements GlobalExceptionHandler
+ Implements filter for listenen all requests
+ Implements TooManyRequest exception.
+ Add database creation for test configuration

--- a/ratelimit/src/main/resources/application.properties
+++ b/ratelimit/src/main/resources/application.properties
@@ -5,3 +5,8 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = create
+
+# Additional logging
+spring.jpa.show-sql = true
