--- a/ratelimit/src/main/resources/application.properties
+++ b/ratelimit/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.application.name=Rate limit
+
+server.port=8081
+
 # Database configuration
 spring.datasource.url=jdbc:h2:mem:ratelimit
 spring.datasource.driverClassName=org.h2.Driver
