Rate limit by roles - Part 1

--- a/ratelimit/src/main/resources/rate-limit.properties
+++ b/ratelimit/src/main/resources/rate-limit.properties
@@ -1,5 +1,6 @@
-# Allowed requests number.
-app.rate.limit=5
+# Allowed requests number by role.
+request.rate.limit.regular=5
+request.rate.limit.premium=10
 
 # Time limit (milliseconds).
-app.rate.durationinms=60000
+request.rate.duration=60000
