Circuit breaker implementation

--- a/ratelimit/src/main/resources/rate-limit.properties
+++ b/ratelimit/src/main/resources/rate-limit.properties
@@ -4,3 +4,6 @@ request.rate.limit.premium=10
 
 # Time limit (milliseconds).
 request.rate.duration=60000
+
+# Circuit breaker request number
+circuit.breaker.request.number=10
